static/css/style.css
/* ... */
#somethingelse-form #submit-button-somethingelse:hover {
	cursor: pointer;
	color: var(--color-1);
    background-color:#fff;
	transition: background-color .25s ease-in-out;
   -moz-transition: background-color .25s ease-in-out;
   -webkit-transition: background-color .25s ease-in-out;
}

input#email_somethingelse::-webkit-input-placeholder { /* WebKit browsers */
    color:#fff;
}
input#email_somethingelse:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    color:#fff;
}
input#email_somethingelse::-moz-placeholder { /* Mozilla Firefox 19+ */
    color:#fff;
}
input#email_somethingelse:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:#fff;
}

.somethingelse_success_box{
	font-size:18px;
	font-style:italic;
	color:#fff;
	margin:5px 0;
}

/* b) Buttons */

.btn-white {
	font-family: 'Dosis', sans-serif;
	font-size: 18px;
	line-height: 22px;
	font-weight: 600;
	color: #0883fb;
	background-color: #ffffff;
	border: 1px solid #fff;
    box-shadow: 0px 8px 40px 0 rgba(0, 0, 0, 0.37);
	border-radius: 5px 5px;
    letter-spacing: 1px;
	margin: 10px 10px 0 10px 0;
	padding: 20px 30px;
	display: inline-block;
	transition: all 0.4s ease-in-out;
	-webkit-transition: all 0.4s ease-in-out;
}

.btn-white:hover{
	box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.5);
	color: #0470ea!important;
	background:#f9f9f9;
}

.btn-white-border {
	color: var(--color-3);
	background: transparent;
	font-family: 'Dosis', sans-serif;
	font-size: 18px;
	line-height: 22px;
	font-weight: 600;
	border: 1px solid var(--color-3);
	border-radius: 5px 5px;
	margin: 10px 10px;
	padding: 15px 30px;
	display: inline-block;
	transition: all 0.4s ease-in-out;
	-webkit-transition: all 0.4s ease-in-out;
}

.btn-white-border:hover{
	color: #0883fb;
	background-color: #ffffff;
	border: 1px solid #fff;
}

.btn-white i, .btn-white-border i {
	font-size: 22px;
	line-height: 22px;
	margin-right: 10px;
	vertical-align: text-top;
}

.btn-blue {
	font-family: 'Dosis', sans-serif;
	font-size: 18px;
	line-height: 22px;
	font-weight: 600;
	color: #fff;
	background-color: var(--color-3);
    box-shadow: 0px 8px 40px 0 rgba(0, 0, 0, 0.37);
    text-shadow: 1px 1px 1px rgba(0,0,0,0.25);
    letter-spacing: 1px;
	border-radius: 5px 5px;
	margin: 10px 10px 0 10px 0;
	padding: 20px 30px;
	display: inline-block;
	transition: all 0.4s ease-in-out;
	-webkit-transition: all 0.4s ease-in-out;
}

.btn-blue:hover{
	box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.5);
	color: #fff!important;
	background:var(--color-3);
}

.btn-blue.small, .btn-blue-line.small {
	font-size: 16px;
	padding: 14px 20px;
}

.btn-blue-line {
	font-family: 'Dosis', sans-serif;
	font-size: 18px;
	line-height: 22px;
	font-weight: 600;
	color: var(--color-3);
	background-color: transparent;
	border:1px solid var(--color-3);
	border-radius: 10px 10px;
	margin: 20px 10px 0 10px 0;
	padding: 20px 30px;
	display: inline-block;
	transition: all 0.4s ease-in-out;
	-webkit-transition: all 0.4s ease-in-out;
}

.btn-blue-line:hover{
	color: #fff!important;
	background:var(--color-3);
}

a.btn-blue:visited, a.btn-blue:focus{
	color: #fff!important;
}

/* -----  c) Gallery PopUp ----- */

.popup-wrapper{
	display:block;
	position:relative;
	overflow:hidden;
}

.popup-gallery{
	display:inline-block;
	position:relative;
}

.first-gallery{
	margin-bottom:15px;
}

.popup-gallery img {
	position:relative;
	z-index:10;
	width: 100%;
	height: auto;
}

.popup-gallery:hover img {
	opacity: 0.25;
}

.home-section .popup-gallery:hover img {
	opacity: 1;
}

.popup-gallery a span.eye-wrapper,
.popup-gallery a span.eye-wrapper2 {
	background-color:#000;
	position: absolute;
	display: block;
	overflow:hidden;
	z-index: 2;
	height:100%!important;
	top: 0%;
	margin-top: 0px;
	left: 0%;
	right: 0%;
	font-size: 22px;
	color:#fff;
	text-align: center;
	font-weight:300;
	opacity: 0;
	-webkit-border-radius: 5px 5px 0 0;
    -moz-border-radius: 5px 5px 0 0;
    border-radius: 5px 5px 0 0;
}

.popup-gallery-rounded a span.eye-wrapper,
.popup-gallery-rounded a span.eye-wrapper2 {
	-webkit-border-radius: 5px 5px 5px 5px;
    -moz-border-radius: 5px 5px 5px 5px;
    border-radius: 5px 5px 5px 5px;
}

.popup-gallery a span.eye-wrapper i.eye-icon, .popup-gallery a span.eye-wrapper2 i.eye-icon{
	position: absolute;
	display: inline-block;
	font-size:36px;
	z-index: 3;
	top: 50%!important;
	margin-top: -18px!important;
	left: 0%;
	right: 0%;
}

.popup-gallery a:hover span{
	opacity: 1;
}

.popup-gallery img,
.popup-gallery a span {
	-webkit-transition: all 0.25s ease-in-out;
	-moz-transition: all 0.25s ease-in-out;
	-ms-transition: all 0.25s ease-in-out;
	-o-transition: all 0.25s ease-in-out;
	transition: all 0.25s ease-in-out;
}

/* d) Testimonials */
.testim-inner{
	margin-top: 10px;
	max-width: 800px;
	text-align: center;
}

.testim-inner img{
	max-width: 130px;
	border:1px solid #efefef;
	border-radius: 50% 50%;
	padding: 5px 5px;
	background-color: #fff;
	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15);
	display: inline-block!important;
}

.testim-inner h6{
	margin-bottom: 5px;
	font-size: 20px;
	line-height: 26px;
	font-weight: 700;
	color: var(--color-3);
}

.testim-inner span.job-text{
	font-size: 19px;
	font-weight: 400;
}

.testim-inner p{
	font-size: 20px;
	line-height: 32px;
	font-style: italic;
	margin-top: 20px;
}

/* ----- Testimonial Single ----- */

p.testimonial-single{
	margin-bottom: 25px;
	font-size: 28px;
	line-height: 38px;
	font-weight: 300;
	font-style: italic;
}

/* e) Accordion Tabs */

.card{
	border:none;
}

.card-header {
    padding: 6px 0 9px 0;
    margin-bottom: 0;
    background-color: transparent;
    border-bottom: 1px solid #f4f5f6;
}

.card-header h5 .btn-link {
	padding: 0;
	font-size: 19px;
    font-weight: 600;
    color: var(--color-2);
    background-color: transparent;
}

.card-header h5 .btn-link:hover, .card-header h5 .btn-link:focus {
	text-decoration: none;
}
/* ... */

